--- a/datausa/assets/scss/elements/_nav.scss
+++ b/datausa/assets/scss/elements/_nav.scss
@@ -247,6 +247,10 @@ body {
      left: -100%;
      background: #fff;
     }
+    
+    .b {
+      background-color: #fff;
+    }
   }
 
   .b-1 {
